js&css/extension/www.youtube.com/styles.css
/* ... */
  
.it-playlist-copy-video-id:hover::after {
	content: attr(data-tooltip);
	transform: translateX(-50%);
	color: var(--paper-tooltip-text-color, white);
	background-color: var(--paper-tooltip-background, #616161);
}

/*------------------------------------------------------------------------------
6.0 CHANNEL
------------------------------------------------------------------------------*/

/*------------------------------------------------------------------------------
6.1 PLAY ALL BUTTON
------------------------------------------------------------------------------*/
.it-play-all-button {
	font-size: 14px !important;
	font-weight: 500 !important;
	display: flex !important;
	box-sizing: border-box !important;
	height: 36px !important;
	padding: 6px 36px !important;
	cursor: pointer !important;
	text-transform: uppercase !important;
	color: var(--yt-button-color, var(--yt-spec-text-secondary)) !important;
	align-items: center !important;
	justify-content: center !important;
	text-decoration: none !important;
}

.it-play-all-button svg {
	width: 24px !important;
	height: 24px !important;
	margin: 0 8px 0 0 !important;
	fill: currentColor !important;
}


/*------------------------------------------------------------------------------
6.2 FEATURED CONTENT
------------------------------------------------------------------------------*/
html[it-channel-hide-featured-content=true] #secondary #contents.style-scope.ytd-browse-secondary-contents-renderer,
html[it-channel-hide-featured-content=true] .branded-page-v2-secondary-col {
	display: none !important;
}

html[it-channel-hide-featured-content=true] #secondary.ytd-two-column-browse-results-renderer,
html[it-channel-hide-featured-content=true] #secondary ytd-browse-secondary-contents-renderer {
	width: fit-content;
	height: fit-content;
	padding: 0;
}


/*------------------------------------------------------------------------------
7.0 SHORTCUTS
------------------------------------------------------------------------------*/
#it-status {
	font-size: 40px;
	position: absolute;
	top: 2rem;
	right: 3rem;
	color: #0ff;
	text-shadow: 1px 1px 2px #000;
	z-index: 3000;
}


/*------------------------------------------------------------------------------
8.0 SETTINGS
------------------------------------------------------------------------------*/

/*------------------------------------------------------------------------------
8.1 IMPROVEDTUBE ICON ON YOUTUBE
------------------------------------------------------------------------------*/
.it-button {
	position: relative;
	box-sizing: unset;
	width: 24px;
	height: 24px;
	padding: 8px;
	cursor: pointer;
	border: none;
	outline: none;
	background: transparent;
}

.it-button--below-player {
	position: relative;
	top: -6px;
}

.it-button>span {
	display: none;
	margin: 0 0 0 24px;
}

.it-button::before {
	position: absolute;
	top: 8px;
	left: 8px;
	width: 24px;
	height: 24px;
	content: '';
	border-radius: 50%;
	background: #f00;
	/*	background-image: url('/stuff/icons/48.png');
	background-size: cover;
	background-position: center; */
}

.it-button::after {
	position: absolute;
	top: 14px;
	left: 16px;
	content: '';
	border-top: 6px solid transparent;
	border-bottom: 6px solid transparent;
	border-left: 10px solid #fff;
}

ytd-guide-section-renderer .it-button {
	font-family: inherit;
	font-size: var(--ytd-user-comment_-_font-size);
	font-weight: var(--ytd-user-comment_-_font-weight);
	line-height: var(--ytd-user-comment_-_line-height);
	display: flex;
	box-sizing: border-box;
	width: 100%;
	height: 40px;
	padding: 0 24px;
	letter-spacing: var(--ytd-user-comment_-_letter-spacing);
	color: var(--yt-spec-text-primary);
	align-items: center;
}

ytd-guide-section-renderer .it-button>span {
	display: inline;
}

ytd-guide-section-renderer .it-button::before {
	position: static;
}

ytd-guide-section-renderer .it-button::after {
	left: 32px;
}

.it-button--draggable {
	position: fixed;
	z-index: 5000;
	top: calc(100vh - 64px);
	left: calc(100vw - 64px);
	width: 32px;
	height: 32px;
}

.it-button--draggable::before {
	width: 32px;
	height: 32px;
}

.it-button--draggable::after {
	top: 16px;
	left: 20px;
	border-top: 8px solid transparent;
	border-bottom: 8px solid transparent;
	border-left: 12px solid #fff;
}

.it-button__scrim {
	position: fixed;
	z-index: 2147483648;
	top: 0;
	left: 0;
	width: 100%;
	height: 100vh;
	background: rgba(0, 0, 0, .4);
}

.it-button__iframe {
	position: fixed;
	z-index: 2147483649;
	display: block;
	overflow: hidden;
	width: 320px;
	max-width: calc(100vw - 16px);
	height: 586px;
	max-height: calc(100vh - 16px);
	margin: 0;
	padding: 0;
	border: none;
	border-radius: 8px;
	background: #fff;
}


/*------------------------------------------------------------------------------
9.0 BLOCKLIST
------------------------------------------------------------------------------*/
.it-add-to-blocklist {
	position: absolute;
	top: 4px;
	left: 4px;
	z-index: 2400;
	visibility: hidden;
	width: 28px;
	height: 28px;
	cursor: pointer;
	text-align: center;
	color: white;
	border-radius: 2px;
	background: rgba(0, 0, 0, 0.8);
	border: none;
	outline: none;
	font-family: inherit;
}

.it-add-to-blocklist::after {
	display: flex;
	align-items: center;
	content: 'Blocklist';
	text-transform: uppercase;
	color: white; /*quick-fix for: var(--yt-spec-icon-active-other, #fff);*/
	position: absolute;
	left: 100%;
	top: 0;
	height: 28px;
	width: 0;
	background: rgba(0, 0, 0, 0.8);
	overflow: hidden;
	transition: width 200ms;
	font-weight: 500;
	justify-content: center;
	border-top-right-radius: 2px;
	border-bottom-right-radius: 2px;
}

.it-add-to-blocklist:hover::after {
	width: 96px;
}

.it-add-to-blocklist svg {
	position: absolute;
	top: 4px;
	left: 4px;
	width: 20px;
	height: 20px;
	fill: white; /*quick-fix for  var(--yt-spec-icon-active-other, #fff);*/
	pointer-events: none;
}
/* ... */

